[package]
name = "sprint-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
urlencoding = "2.1"
